// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerAccount Props Forwarding forwards hitSlop prop to PickerBase 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 10,
      "left": 15,
      "right": 15,
      "top": 10,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#b7bbc8",
      "borderRadius": 4,
      "borderWidth": 0,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 16,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
    testID="account-label"
  >
    Orangefox.eth
  </Text>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="ArrowDown"
    style={
      {
        "height": 16,
        "marginLeft": 8,
        "width": 16,
      }
    }
    width={16}
  />
</View>
`;

exports[`PickerAccount Props Forwarding forwards style prop 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#b7bbc8",
      "borderRadius": 4,
      "borderWidth": 0,
      "flexDirection": "row",
      "marginTop": 20,
      "opacity": 1,
      "padding": 16,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
    testID="account-label"
  >
    Orangefox.eth
  </Text>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="ArrowDown"
    style={
      {
        "height": 16,
        "marginLeft": 8,
        "width": 16,
      }
    }
    width={16}
  />
</View>
`;

exports[`PickerAccount Rendering should render correctly with snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#b7bbc8",
      "borderRadius": 4,
      "borderWidth": 0,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 16,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
    testID="account-label"
  >
    Orangefox.eth
  </Text>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="ArrowDown"
    style={
      {
        "height": 16,
        "marginLeft": 8,
        "width": 16,
      }
    }
    width={16}
  />
</View>
`;
